# fooapp-cmake

./: CMakeLists.txt  README.md
cmake_modules/: Project.cmake
include/: hello_app.h
src/: hello_app.cpp
